# OpenSMOGmod

./: LICENSE  README.md  REAMDE.md  pyproject.toml  requirements.txt
OpenSMOGmod/: OpenSMOGmod.py  OpenSMOGmod.xsd  __init__.py
examples/using_addonXML/: run_openSMOGmod.py
examples/using_addonXML/Input/: input_addon.xml  input_struc.gro  input_topol.xml
examples/using_procInsXML/: run_openSMOGmod.py
examples/using_procInsXML/Input/: input_topol.top  input_topol.xml
